tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_status_line_enabled_mode_right.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1555
expression: terminal.backend()
---
"                                                                                    【 📝 Plan  (shift+tab to cycle)】  " Hidden by multi-width symbols: [(85, " "), (88, " "), (117, " ")]
