tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_status_line_enabled_no_mode_right.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                           context: --  "
