tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_status_line_overrides_shortcuts.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Status line content                                                           "
"                                                                   context: --  "
