tui/src/bottom_pane/snapshots/ody_tui__bottom_pane__footer__tests__footer_status_line_truncated_with_gap.snap
---
source: tui/src/bottom_pane/footer.rs
assertion_line: 1555
expression: terminal.backend()
---
"  Status line content t… 【 📝 Plan 】  " Hidden by multi-width symbols: [(26, " "), (29, " "), (37, " ")]
